--- a/Mvc5Examples/Mvc5My/Web.config
+++ b/Mvc5Examples/Mvc5My/Web.config
@@ -75,6 +75,6 @@
   <connectionStrings>
     <add name="MyDb1" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\MyDb1.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="MyDb2" connectionString="data source=(LocalDb)\v11.0;                             attachdbfilename=|DataDirectory|\MyDb2.mdf;                             integrated security=True;                             MultipleActiveResultSets=True;                             App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MyDb3" connectionString="data source=(LocalDb)\v11.0;initial catalog=Mvc5My.ApiService.Models.MyDb3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MyDb3" connectionString="data source=(LocalDb)\.\IIS_DB;initial catalog=Mvc5My.ApiService.Models.MyDb3;attachdbfilename=|DataDirectory|\MyDb3.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
